--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-jwt": "^4.0.0",
+    "koa-multer": "^1.0.2",
     "koa-router": "^10.0.0",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
