--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
+    "log4js": "^6.3.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
   }
